# AdbAutoPlayer

./: .gitignore  .pre-commit-config.yaml  README.md  Taskfile.yml  app.go  app_darwin.go  app_linux.go  app_windows.go  build_zip.sh  flake.nix  go.mod  go.sum  gui.spec  macos.spec  main.go  modules.nix  mypy.ini  packages.nix  pyproject.toml  wails.json  windows.spec
.github/: RELEASE_TEMPLATE.md  (+3 more)
python/: .gitignore  .pre-commit-config.yaml  README.md  mypy.ini  pyproject.toml
python/adb_auto_player/: __init__.py  adb.py  argparse_formatter_factory.py  command.py  config_loader.py  device_stream.py  exceptions.py  game.py  game_config_base.py  log_presets.py  log_types.py  logging_setup.py  main.py  main_decorator.py  screen_utils.py  server.py  template_matching.py
python/adb_auto_player/cli/: __init__.py  argparse_formatter_factory.py  argparse_helper.py
python/adb_auto_player/commands/: __init__.py  adb.py  debug.py  display_gui.py  get_running_game.py  gui_categories.py  gui_menu.py
python/adb_auto_player/config/: __init__.py  game_config_base.py
python/adb_auto_player/decorators/: __init__.py  register_command.py  register_custom_routine_choice.py  register_game.py  register_lru_cache.py
python/adb_auto_player/device/adb/: __init__.py  adb_client.py  adb_controller.py  adb_device.py  adb_utils.py  device_stream.py  retry_decorator.py
python/adb_auto_player/exceptions/: __init__.py  pydantic.py
python/adb_auto_player/game/: game.py
python/adb_auto_player/games/: __init__.py  game.py
python/adb_auto_player/games/afk_journey/: AFKJourney.toml  AfkJourney.toml  __init__.py  afk_journey_base.py  afkjourneynavigation.py  base.py  battle_state.py  config.py  heroes.py  main.py  navigation.py  popup_handler.py  popup_message_handler.py  run.py
python/adb_auto_player/games/afk_journey/_references/: README.md
python/adb_auto_player/games/avatar_realms_collide/: AvatarRealmsCollide.toml  __init__.py  base.py  config.py  main.py
python/adb_auto_player/games/guitar_girl/: guitar_girl.py
python/adb_auto_player/games/infinity_nikki/: InfinityNikki.toml  __init__.py  base.py  config.py  main.py
python/adb_auto_player/games/kingshot/: KingShot.toml  __init__.py  config.py  main.py
python/adb_auto_player/games/zzz_config_example/: README.md  ZzzConfigExample.toml  __init__.py  config.py  main.py
python/adb_auto_player/image_manipulation/: __init__.py  color.py  cropping.py  io.py
python/adb_auto_player/ipc/: __init__.py  constraint.py  constraint_factory.py  game_gui.py  log_message.py  menu_option.py
python/adb_auto_player/ipc_util/: __init__.py  ipc_constraint_extractor.py  ipc_model_converter.py
python/adb_auto_player/log/: __init__.py  logging_setup.py
python/adb_auto_player/models/: __init__.py  confidence_value.py  threshold.py
python/adb_auto_player/models/commands/: command.py  menu_item.py
python/adb_auto_player/models/decorators/: __init__.py  game_gui_metadata.py  gui_metadata.py  lru_cache_group.py
python/adb_auto_player/models/device/: __init__.py  display.py
python/adb_auto_player/models/geometry/: __init__.py  box.py  coordinates.py  point.py
python/adb_auto_player/models/image_manipulation/: crop_result.py
python/adb_auto_player/models/image_processing/: __init__.py
python/adb_auto_player/models/ocr/: __init__.py  ocr_result.py
python/adb_auto_player/models/pydantic/: __init__.py  game_config.py  general_settings.py  my_custom_routine_config.py
python/adb_auto_player/models/registries/: game_metadata.py
python/adb_auto_player/models/template_matching/: TemplateMatchResult.py  __init__.py  match_box.py  template_match_result.py
python/adb_auto_player/ocr/: __init__.py  easy_ocr_backend.py  ocr_backend.py  tesseract_backend.py  tesseract_config.py
python/adb_auto_player/registries/: __init__.py  registries.py
python/adb_auto_player/settings/: __init__.py  config_loader.py
python/adb_auto_player/template_matching/: __init__.py  template_matcher.py  template_matching.py
python/adb_auto_player/util/: __init__.py  config_loader.py  dev_helper.py  execute.py  ipc_constraint_extractor.py  ipc_model_converter.py  log_message_factory.py  module_helper.py  string_helper.py  summary_generator.py  traceback_helper.py  type_helpers.py
python/adb_auto_player/wip_models/: __init__.py  box.py  point.py
python/tests/: test_device_stream.py  test_game.py  test_logging_setup.py  test_main.py  test_template_matching.py
python/tests/image_manipulation/: test_color.py  test_cropping.py
python/tests/image_manipulation/io/: test_io_get_bgr_np_array_from_png_bytes.py  test_io_load_image.py
python/tests/logging/: test_logging_setup.py
python/tests/models/: test_confidence_value.py  test_threshold.py
python/tests/models/geometry/: test_box.py  test_point.py
python/tests/models/ocr/: test_ocr_result.py
python/tests/models/template_matching/: test_template_match_result.py
python/tests/ocr/: test_ocr_backend.py
python/tests/ocr/test_tesseract_backend/: test_backend_info.py  test_tesseract_backend_afkj_popup.py  test_tesseract_backend_info.py
python/tests/template_matching/: test_template_matching_edge_cases.py  test_template_matching_find_all_matches.py  test_template_matching_find_template_match.py  test_template_matching_find_worst_template_match.py  test_template_matching_integration.py  test_template_matching_old.py  test_template_matching_prepare_images_for_processing.py  test_template_matching_similar_image.py  test_template_matching_suppress_close_matches.py  test_template_matching_validate_template_size.py
python/tests/utils/: test_config_loader.py  test_ipc_model_converter.py  test_log_message_factory.py  test_module_helper.py  test_traceback_helper.py  test_type_helpers.py
python/tests/utils/string_helper/: test_sanitize_path.py
(+320 files in other folders)
