[project]
name = "adb-auto-player"
version = "0.0.0"
description = ""
authors = [
    { name = "yulesxoxo <https://github.com/yulesxoxo/yulesxoxo>" },
    { name = "Vale <https://github.com/Valextr/Valextr>" },
]
requires-python = ">=3.13"
readme = "README.md"
dependencies = [
    "adbutils>=2.8.7,<3",
    "opencv-python>=4.10.0.84,<5",
    "pydantic>=2.10.5,<3",
    "av>=14.1.0,<15",
    "pillow>=11.1.0",
    "pytesseract>=0.3.13",
]

[project.scripts]
adb-auto-player = "adb_auto_player.main:main"

[dependency-groups]
dev = [
    "nuitka>=2.7,<3",
    "pytest>=8.3.4,<9",
    "commitizen>=4.2.2,<5",
]

[tool.uv]
package = true
required-version = ">=0.7.0"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py312"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = [
    "F",   # pyflakes
    "D",   # pydocstyle
    "E",   # pycodestyle error
    "N",   # pep8-naming
    "RUF", # ruff
    "UP",  # pyupgrade
    "PL",  # pylint
]
ignore = [
    "D203",  # incorrect-blank-line-before-class
    "D406",  # missing-new-line-after-section-name
    "D407",  # missing-dashed-underline-after-section
    "UP017", # datetime-timezone-utc
]

[tool.ruff.lint.per-file-ignores]
# Ignore D100 (Missing docstring in public module) only in games subdirs
"**/games/**/*.py" = ["D100", "D101", "D102"]
"**/tests/**/*.py" = ["D100", "D101", "D102", "D103", "D104", "PLR2004"]

[tool.ruff.lint.pydocstyle]
convention = "google"
